<resources>
    <string name="app_name">BestHotelDemoProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel">Отель</string>
    <string name="photo">Photo</string>
    <string name="star_number">5</string>
    <string name="rating_text">Превосходно!</string>
    <string name="hotel_name">Название отеля</string>
    <string name="address">Адрес</string>
    <string name="price_from">от %d</string>
    <string name="price_details">за тур с перелетом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="peculiarity">3-я линия</string>
    <string name="peculiarityTwo">Платный Wi-Fi в фойе</string>
    <string name="peculiarityThree">30 км до аэропорта</string>
    <string name="peculiarityFour">1 км до пляжа</string>
    <string name="hotel_description">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="facilities">Удобства</string>
    <string name="included">Что включено</string>
    <string name="notIncluded">Что не включено</string>
    <string name="necessities">Самое необходимое</string>
    <string name="go_to_booking">К выбору номера</string>
    <string name="hello_room_fragment">Room Fragment</string>
    <string name="rooms">Название отеля</string>
    <string name="room_name">Стандартный номер с видом на бассейн</string>
    <string name="roomPeculiarity">Все включено</string>
    <string name="roomPeculiarityTwo">Кондиционер</string>
    <string name="roomPeculiarityThree">Собственный бассейн</string>
    <string name="roomDetails">Подробнее о номере</string>
    <string name="room_price">%d \u20BD</string>
    <string name="room_price_details">за 7 ночей с перелетом</string>
    <string name="bookRoom">Выбрать номер</string>
    <string name="booking">Бронирование</string>
    <string name="flightFrom">Вылет из</string>
    <string name="city">Санкт-Петербург</string>
    <string name="countryCity">Страна, город</string>
    <string name="selectedCountryCity">Египет, Хургада</string>
    <string name="nightsNumber">Кол-во ночей</string>
    <string name="selectedNightsNumber">%d ночей</string>
    <string name="room">Номер</string>
    <string name="dates">Даты</string>
    <string name="selectedDates">%s - %s</string>
    <string name="food">Питание</string>
    <string name="foodInfo">Все включено</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="number_mask">+7 (***) ***-**-**</string>
    <string name="dataNotTransferred">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту.</string>
    <string name="first_tourist">Первый турист</string>
    <string name="tourist_name">Имя</string>
    <string name="tourist_surname">Фамилия</string>
    <string name="tourist_birthday">Дата рождения</string>
    <string name="tourist_citizenship">Гражданство</string>
    <string name="tourist_passport_number">Номер загранпаспорта</string>
    <string name="tourist_passport_valid_till">Срок действия загранпаспорта</string>
    <string name="second_tourist">Второй турист</string>
    <string name="next_tourist">Следующий турист</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="fuelCharge">%d \u20BD</string>
    <string name="tour_price">%d \u20BD</string>
    <string name="service_charge">%d \u20BD</string>
    <string name="fuelChargeLabel">Топливный сбор</string>
    <string name="serviceChargeLabel">Сервисный сбор</string>
    <string name="amountLabel">К оплате</string>
    <string name="amount">%d \u20BD</string>
    <string name="pay_text">Оплатить %d \u20BD</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="confirmation_text">Подтверждение заказа №%d может занять некоторое время (от 1 часа до суток).\nКак только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="super_text">Супер!</string>
    <string name="tourist_number">%d-й турист</string>
</resources>