<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SuccessFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/successToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black"
        >

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfprodisplaymedium"
            android:text="@string/order_paid"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>


    <FrameLayout
        android:id="@+id/partyPopperLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/successToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_party_popper_background"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/party_popper"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:id="@+id/successTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/order_accepted"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partyPopperLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/confirmationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/confirmation_text"
        android:textSize="18sp"
        android:textColor="@color/success_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/successButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/super_text"
        android:backgroundTint="#0D72FF"
        android:layout_marginTop="100dp"
        app:cornerRadius="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/confirmationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>